syntax = "proto3";

package resetpassword;
option go_package = "reset-password-service/pb";

service ResetPasswordService {
  rpc RequestReset (RequestResetRequest) returns (RequestResetResponse);
  rpc VerifyResetToken (VerifyResetTokenRequest) returns (VerifyResetTokenResponse);
  rpc ResetPassword (ResetPasswordRequest) returns (ResetPasswordResponse);
}

message RequestResetRequest {
  string email = 1;
}

message RequestResetResponse {
  string message = 1;
}

message VerifyResetTokenRequest {
  string token = 1;
}

message VerifyResetTokenResponse {
  bool valid = 1;
  string email = 2;
}

message ResetPasswordRequest {
  string token = 1;
  string new_password = 2;
}

message ResetPasswordResponse {
  string message = 1;
}
